<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_event"
        android:title="@string/event"

        android:icon="@drawable/ic_event"/>

    <item
        android:id="@+id/navigation_attendance"
        android:title="@string/departments"
        android:icon="@drawable/department"/>
<item
    android:id="@+id/navigation_contacts"
    android:title="@string/contacts"
    android:icon="@drawable/ic_baseline_phone_24"/>

    <item
        android:id="@+id/navigation_gallery"
        android:title="@string/gallery"
        android:icon="@drawable/ic_baseline_collections_24"/>
    <item
        android:id="@+id/navigation_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"/>
</menu>