<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#3F51B5"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:background="@drawable/bg"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_gravity="left"
        app:layout_constraintBottom_toTopOf="@+id/cardView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView21"
        app:layout_constraintVertical_bias="0.035"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="72dp"
        android:text="NSS UNIT"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cardView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.119" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView11"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="bottom"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintHorizontal_weight="1">

            <Button
                android:id="@+id/event"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:transitionName="@string/events"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:padding="1dp"
                android:text="Events"></Button>

            <Button
                android:id="@+id/rally"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:transitionName="rally"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/rally"></Button>

            <Button
                android:id="@+id/drive"
                android:layout_width="0dp"
                android:transitionName="drive"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/drive"></Button>

            <Button
                android:id="@+id/camp"
                android:layout_width="0dp"
                android:transitionName="camp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/camp"></Button>


        </LinearLayout>

        <Button
            android:id="@+id/visit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="150dp"
            android:layout_marginRight="40dp"
            android:backgroundTint="#283593"
            android:text="Visit Website"
            tools:ignore="UnusedAttribute">

        </Button>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="10dp"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/profilebg"
        android:src="@drawable/clg1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>